--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,27 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '../../node_modules/vue-multiselect/dist/vue-multiselect.css';
+
+@layer base {
+    [type='text'],
+    [type='email'],
+    [type='url'],
+    [type='password'],
+    [type='number'],
+    [type='date'],
+    [type='datetime-local'],
+    [type='month'],
+    [type='search'],
+    [type='tel'],
+    [type='time'],
+    [type='week'],
+    [multiple],
+    textarea,
+    select {
+        @apply mt-1 block w-full bg-white border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm;
+    }
+    [type='checkbox'],
+    [type='radio'] {
+        @apply rounded border-gray-300 text-indigo-600 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
+    }
+}
