--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,11 +19,11 @@
     [multiple],
     textarea,
     select {
-        @apply mt-1 block w-full bg-white border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm;
+        @apply mt-1 block w-full bg-white border-gray-300 focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50 rounded-md shadow-sm;
     }
     [type='checkbox'],
     [type='radio'] {
-        @apply rounded border-gray-300 text-indigo-600 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
+        @apply rounded border-gray-300 text-blue-600 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50;
     }
 }
 
